fix(Tabs): delete z-index tab border

--- a/packages/ui/components/Tabs/Tab/index.styl
+++ b/packages/ui/components/Tabs/Tab/index.styl
@@ -15,7 +15,6 @@ _borderSize = 2px
 
 .border
   position absolute
-  z-index 9999
 
   &.top
   &.bottom
